--- a/index.html
+++ b/index.html
@@ -1,112 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Freshers Day Voting</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Saptarang Freshers Day Voting</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f8fa;
-    margin: 0;
-    padding: 20px;
-    text-align: center;
-  }
-  h1 {
-    color: #333;
-  }
-  .candidate-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 30px;
-  }
-  .candidate {
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-    width: 180px;
-    padding: 15px;
-    cursor: pointer;
-    transition: transform 0.2s ease-in-out;
-  }
-  .candidate:hover {
-    transform: translateY(-6px);
-  }
-  .candidate img {
-    max-width: 100%;
-    border-radius: 8px;
-  }
-  .name {
-    font-weight: bold;
-    margin: 12px 0 8px 0;
-    color: #222;
-  }
-  .votes {
-    color: #555;
-  }
-  button.vote-btn {
-    margin-top: 10px;
-    cursor: pointer;
-    background-color: #007bff;
-    border: none;
-    padding: 8px 14px;
-    color: white;
-    font-weight: 600;
-    border-radius: 4px;
-  }
-  button.vote-btn:focus {
-    outline: none;
-  }
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 20px;
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb);
+  background-size: 400% 400%;
+  animation: gradientBG 15s ease infinite;
+}
+@keyframes gradientBG {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+h1 {
+  text-align: center;
+  font-size: 4em;
+  font-weight: bold;
+  background: linear-gradient(90deg, #ff0000, #ff9900, #ffff00, #33ff33, #33ccff, #9933ff);
+  -webkit-background-clip: text;
+  color: transparent;
+  margin-bottom: 40px;
+  animation: rainbow 5s linear infinite;
+}
+@keyframes rainbow {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+h2 {
+  margin-top: 40px;
+  text-align: center;
+  font-size: 2.2em;
+  text-decoration: underline;
+  color: #fff;
+  text-shadow: 1px 1px 5px #000;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
+  gap: 20px;
+  margin-top: 20px;
+}
+.card {
+  padding: 10px;
+  text-align: center;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+}
+.card img {
+  max-width: 100%;
+  border-radius: 12px;
+  border: 3px solid #fff;
+}
+.vote-btn {
+  margin-top: 10px;
+  padding: 10px 18px;
+  border:none;
+  border-radius:10px;
+  cursor:pointer;
+  font-weight:bold;
+  color:#fff;
+  background: linear-gradient(45deg, #ff6b6b, #feca57, #1dd1a1);
+  background-size: 300% 300%;
+  animation: btnGradient 5s ease infinite;
+  transition: transform 0.2s;
+}
+.vote-btn:hover {
+  transform: scale(1.1);
+}
+@keyframes btnGradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+.vote-btn:disabled {
+  background: #888;
+  cursor: not-allowed;
+}
+#resultsModal {
+  display:none;
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: rgba(0,0,0,0.9);
+  overflow:auto;
+}
+#resultsContent {
+  background:#fff;
+  color:#000;
+  margin:5% auto;
+  padding:20px;
+  width:90%;
+  max-width:600px;
+  border-radius:12px;
+}
+.close-btn { float:right; cursor:pointer; font-size:20px; }
 </style>
 </head>
 <body>
+<h1>Saptarang</h1>
 
-<h1>Vote for Freshers Day</h1>
+<h2>Mr. Fresher</h2>
+<div class="grid" id="mrCards"></div>
 
-<div class="candidate-container" id="candidates">
-  <!-- Candidates will be injected here -->
+<h2>Mrs. Fresher</h2>
+<div class="grid" id="mrsCards"></div>
+
+<div id="resultsModal">
+  <div id="resultsContent">
+    <span class="close-btn" onclick="toggleResults()">&times;</span>
+    <h2>Voting Results</h2>
+    <ul id="resultsList"></ul>
+    <button onclick="resetVotes()">Reset Votes</button>
+  </div>
 </div>
 
 <script>
-  // Candidates data
-  const candidates = [
-    { name: 'Samantha', image: 'samantha-ruth-prabhu-stills-photos-pictures-2008.jpg', votes: 0 },
-    { name: 'Prabhas', image: 'prabhas_latest_photos_2807170354_03.jpg', votes: 0 },
-    { name: 'Kajal', image: 'a4c87cf5b9871dd67ebc6df0627d000a.jpg', votes: 0 },
-    { name: 'Sreelela', image: 'Sreeleela-m-1.jpg', votes: 0 },
-    { name: 'Sai Pallavi', image: 'HD-wallpaper-sai-pallavi-fidaa-love-story-naga-chaitanya-sai-pallavi-shekhar-kammula-tollywood.jpg', votes: 0 },
-    { name: 'Chiranjeevi', image: '517EDEYjsHL.jpg', votes: 0 },
-    { name: 'Ram Charan', image: 'MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@.V1_FMjpg_UX1000.jpg', votes: 0 },
-    { name: 'Appu', image: '4b66c7797edf566ce33faf716aff65f6.jpg', votes: 0 }
-  ];
+const males = [
+  {name:"Rohan", img:"https://via.placeholder.com/200x250?text=Rohan"},
+  {name:"Amit", img:"https://via.placeholder.com/200x250?text=Amit"},
+  {name:"Vikram", img:"https://via.placeholder.com/200x250?text=Vikram"},
+  {name:"Sahil", img:"https://via.placeholder.com/200x250?text=Sahil"}
+];
+const females = [
+  {name:"Priya", img:"https://via.placeholder.com/200x250?text=Priya"},
+  {name:"Anjali", img:"https://via.placeholder.com/200x250?text=Anjali"},
+  {name:"Sneha", img:"https://via.placeholder.com/200x250?text=Sneha"},
+  {name:"Divya", img:"https://via.placeholder.com/200x250?text=Divya"}
+];
 
-  const container = document.getElementById('candidates');
+let votes = JSON.parse(localStorage.getItem('votes')) || {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
+let votedDevices = JSON.parse(localStorage.getItem('votedDevices')) || [];
 
-  function renderCandidates() {
-    container.innerHTML = '';
-    candidates.forEach((candidate, index) => {
-      const candidateDiv = document.createElement('div');
-      candidateDiv.classList.add('candidate');
-      candidateDiv.innerHTML = `
-        <img src="${candidate.image}" alt="${candidate.name}" />
-        <div class="name">${candidate.name}</div>
-        <div class="votes">Votes: <span id="votes-${index}">${candidate.votes}</span></div>
-        <button class="vote-btn" onclick="vote(${index})">Vote</button>
-      `;
-      container.appendChild(candidateDiv);
-    });
+function renderCards(){
+  const mrContainer=document.getElementById('mrCards'); mrContainer.innerHTML='';
+  males.forEach((c,i)=>{
+    const card=document.createElement('div'); card.className='card';
+    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
+    <button class="vote-btn" onclick="vote('males',${i})" ${votedDevices.includes('males') || votedDevices.includes('females')?'disabled':''}>Vote</button>`;
+    mrContainer.appendChild(card);
+  });
+
+  const mrsContainer=document.getElementById('mrsCards'); mrsContainer.innerHTML='';
+  females.forEach((c,i)=>{
+    const card=document.createElement('div'); card.className='card';
+    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
+    <button class="vote-btn" onclick="vote('females',${i})" ${votedDevices.includes('males') || votedDevices.includes('females')?'disabled':''}>Vote</button>`;
+    mrsContainer.appendChild(card);
+  });
+}
+
+function vote(group,i){
+  if(!votedDevices.includes(group)){
+    votes[group][i]++;
+    votedDevices.push('males'); votedDevices.push('females'); // prevent multiple votes
+    localStorage.setItem('votes',JSON.stringify(votes));
+    localStorage.setItem('votedDevices',JSON.stringify(votedDevices));
+    alert('Vote submitted!');
+    renderCards();
+  } else { alert('You have already voted!'); }
+}
+
+function toggleResults(){
+  const modal=document.getElementById('resultsModal'); const list=document.getElementById('resultsList');
+  if(modal.style.display==='block'){ modal.style.display='none'; }
+  else{
+    list.innerHTML='';
+    males.forEach((v,i)=>{const li=document.createElement('li'); li.textContent=`${males[i].name} (Mr.): ${votes.males[i]} votes`; list.appendChild(li);});
+    females.forEach((v,i)=>{const li=document.createElement('li'); li.textContent=`${females[i].name} (Mrs.): ${votes.females[i]} votes`; list.appendChild(li);});
+    modal.style.display='block';
   }
+}
 
-  function vote(index) {
-    candidates[index].votes++;
-    document.getElementById(`votes-${index}`).textContent = candidates[index].votes;
-    alert(`You voted for ${candidates[index].name}`);
+function resetVotes(){
+  if(confirm('Reset all votes?')){
+    votes={males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
+    votedDevices=[];
+    localStorage.setItem('votes',JSON.stringify(votes));
+    localStorage.setItem('votedDevices',JSON.stringify(votedDevices));
+    renderCards(); toggleResults();
   }
+}
 
-  renderCandidates();
+document.addEventListener('keydown',(e)=>{
+  if(e.key==='R'||e.key==='r') toggleResults();
+  if(e.key==='L'||e.key==='l') resetVotes();
+});
+
+renderCards();
 </script>
-
 </body>
 </html>
