--- a/index.html
+++ b/index.html
@@ -125,141 +125,80 @@ h2 {
     <button onclick="resetVotes()">Reset Votes</button>
   </div>
 </div>
-<script type="module">
-  // Import Firebase modules
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-  import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 
-  // Your Firebase config
-  const firebaseConfig = {
-    apiKey: "AIzaSyASRaI1yNulEOcUlhtiA2S1Phf4P8TfYMk",
-    authDomain: "voting-sdc.firebaseapp.com",
-    databaseURL: "https://voting-sdc-default-rtdb.firebaseio.com",
-    projectId: "voting-sdc",
-    storageBucket: "voting-sdc.firebasestorage.app",
-    messagingSenderId: "28360274587",
-    appId: "1:28360274587:web:4919d667621e3480038c3e",
-    measurementId: "G-GZYTTT6QHJ"
-  };
+<script>
+const males = [
+  {name:"Rohan", img:"https://via.placeholder.com/200x250?text=Rohan"},
+  {name:"Amit", img:"https://via.placeholder.com/200x250?text=Amit"},
+  {name:"Vikram", img:"https://via.placeholder.com/200x250?text=Vikram"},
+  {name:"Sahil", img:"https://via.placeholder.com/200x250?text=Sahil"}
+];
+const females = [
+  {name:"Priya", img:"https://via.placeholder.com/200x250?text=Priya"},
+  {name:"Anjali", img:"https://via.placeholder.com/200x250?text=Anjali"},
+  {name:"Sneha", img:"https://via.placeholder.com/200x250?text=Sneha"},
+  {name:"Divya", img:"https://via.placeholder.com/200x250?text=Divya"}
+];
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const db = getDatabase(app);
+let votes = JSON.parse(localStorage.getItem('votes')) || {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
+let votedDevices = JSON.parse(localStorage.getItem('votedDevices')) || [];
 
-  const adminPassword = "saptarang123";
-
-  const males = [
-    {name:"Prabhas", img:"prabhas_latest_photos_2807170354_03.jpg"},
-    {name:"Chiranjeevi", img:"517EDEYjsHL.jpg"},
-    {name:"Appu", img:"4b66c7797edf566ce33faf716aff65f6.jpg"},
-    {name:"Ramcharan", img:"MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"}
-  ];
-  const females = [
-    {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"},
-    {name:"Sai Pallavi", img:"HD-wallpaper-sai-pallavi-fidaa-love-story-naga-chaitanya-sai-pallavi-shekhar-kammula-tollywood.jpg"},
-    {name:"Sreelela", img:"Sreeleela-m-1.jpg"},
-    {name:"Kajal", img:"a4c87cf5b9871dd67ebc6df0627d000a.jpg"}
-  ];
-
-  let locked = false;
-
-  function renderCards(){
-    const voted = localStorage.getItem('voted') === 'true';
-
-    const mrContainer = document.getElementById('mrCards');
-    mrContainer.innerHTML = '';
-    males.forEach((c,i)=>{
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.innerHTML = `
-        <img src="${c.img}" alt="${c.name}">
-        <h3>${c.name}</h3>
-        <button class="vote-btn" onclick="vote('males',${i})" ${locked || voted ? 'disabled' : ''}>Vote</button>`;
-      mrContainer.appendChild(card);
-    });
-
-    const mrsContainer = document.getElementById('mrsCards');
-    mrsContainer.innerHTML = '';
-    females.forEach((c,i)=>{
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.innerHTML = `
-        <img src="${c.img}" alt="${c.name}">
-        <h3>${c.name}</h3>
-        <button class="vote-btn" onclick="vote('females',${i})" ${locked || voted ? 'disabled' : ''}>Vote</button>`;
-      mrsContainer.appendChild(card);
-    });
-  }
-
-  // Save vote to Firebase
-  window.vote = async function(group,i){
-    if(localStorage.getItem('voted')){
-      alert("You already voted!");
-      return;
-    }
-    const voteRef = ref(db, `votes/${group}/${i}`);
-    const snapshot = await get(voteRef);
-    let current = snapshot.exists() ? snapshot.val() : 0;
-    await set(voteRef, current + 1);
-    localStorage.setItem('voted', 'true');
-    alert("Vote submitted!");
-    renderCards();
-  }
-
-  // Show results (admin only)
-  window.toggleResults = async function(){
-    const pass = prompt("Enter admin password to view results:");
-    if(pass !== adminPassword){
-      alert("Wrong password!");
-      return;
-    }
-    const modal = document.getElementById('resultsModal');
-    const list = document.getElementById('resultsList');
-    list.innerHTML = '';
-
-    // Get males results
-    const malesSnap = await get(ref(db,"votes/males"));
-    males.forEach((c,i)=>{
-      const li = document.createElement("li");
-      const count = (malesSnap.exists() && malesSnap.val()[i]) || 0;
-      li.textContent = `${c.name} (Mr.): ${count} votes`;
-      list.appendChild(li);
-    });
-
-    // Get females results
-    const femalesSnap = await get(ref(db,"votes/females"));
-    females.forEach((c,i)=>{
-      const li = document.createElement("li");
-      const count = (femalesSnap.exists() && femalesSnap.val()[i]) || 0;
-      li.textContent = `${c.name} (Mrs.): ${count} votes`;
-      list.appendChild(li);
-    });
-
-    modal.style.display = "block";
-  }
-
-  // Reset votes (admin only)
-  window.resetVotes = async function(){
-    const pass = prompt("Enter admin password to reset votes:");
-    if(pass !== adminPassword){
-      alert("Wrong password!");
-      return;
-    }
-    if(confirm("Reset all votes?")){
-      await set(ref(db,"votes"), {males:Array(males.length).fill(0), females:Array(females.length).fill(0)});
-      localStorage.removeItem('voted');
-      locked = false;
-      alert("Votes reset successfully!");
-      renderCards();
-    }
-  }
-
-  document.addEventListener('keydown',(e)=>{
-    if(e.key==='R'||e.key==='r') toggleResults();
-    if(e.ctrlKey && e.altKey && e.key==='r') resetVotes();
+function renderCards(){
+  const mrContainer=document.getElementById('mrCards'); mrContainer.innerHTML='';
+  males.forEach((c,i)=>{
+    const card=document.createElement('div'); card.className='card';
+    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
+    <button class="vote-btn" onclick="vote('males',${i})" ${votedDevices.includes('males') || votedDevices.includes('females')?'disabled':''}>Vote</button>`;
+    mrContainer.appendChild(card);
   });
 
-  renderCards();
+  const mrsContainer=document.getElementById('mrsCards'); mrsContainer.innerHTML='';
+  females.forEach((c,i)=>{
+    const card=document.createElement('div'); card.className='card';
+    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
+    <button class="vote-btn" onclick="vote('females',${i})" ${votedDevices.includes('males') || votedDevices.includes('females')?'disabled':''}>Vote</button>`;
+    mrsContainer.appendChild(card);
+  });
+}
+
+function vote(group,i){
+  if(!votedDevices.includes(group)){
+    votes[group][i]++;
+    votedDevices.push('males'); votedDevices.push('females'); // prevent multiple votes
+    localStorage.setItem('votes',JSON.stringify(votes));
+    localStorage.setItem('votedDevices',JSON.stringify(votedDevices));
+    alert('Vote submitted!');
+    renderCards();
+  } else { alert('You have already voted!'); }
+}
+
+function toggleResults(){
+  const modal=document.getElementById('resultsModal'); const list=document.getElementById('resultsList');
+  if(modal.style.display==='block'){ modal.style.display='none'; }
+  else{
+    list.innerHTML='';
+    males.forEach((v,i)=>{const li=document.createElement('li'); li.textContent=`${males[i].name} (Mr.): ${votes.males[i]} votes`; list.appendChild(li);});
+    females.forEach((v,i)=>{const li=document.createElement('li'); li.textContent=`${females[i].name} (Mrs.): ${votes.females[i]} votes`; list.appendChild(li);});
+    modal.style.display='block';
+  }
+}
+
+function resetVotes(){
+  if(confirm('Reset all votes?')){
+    votes={males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
+    votedDevices=[];
+    localStorage.setItem('votes',JSON.stringify(votes));
+    localStorage.setItem('votedDevices',JSON.stringify(votedDevices));
+    renderCards(); toggleResults();
+  }
+}
+
+document.addEventListener('keydown',(e)=>{
+  if(e.key==='R'||e.key==='r') toggleResults();
+  if(e.key==='L'||e.key==='l') resetVotes();
+});
+
+renderCards();
 </script>
 </body>
 </html>
